<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:onClick="hideKeyboard">

    <ImageView
        android:id="@+id/imgLogo2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/whatsapp"
        android:layout_margin="@dimen/margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_signUpTitle"
        android:textSize="@dimen/title_size"
        android:layout_margin="@dimen/margin"
        android:padding="@dimen/padding"
        android:textStyle="bold"
        android:textColor="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgLogo2"/>

    <!-- drop down box for area cod -->
    <EditText
        android:id="@+id/edtSignupNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_number"
        android:inputType="number"
        android:digits="0123456789"
        android:maxLength="10"
        android:layout_margin="@dimen/margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_signup"
        android:textSize="@dimen/text_size"
        android:layout_margin="@dimen/margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtSignupNumber"/>

    <Button
        android:id="@+id/btnGoToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_goToLoginPage"
        android:textSize="@dimen/text_size"
        android:layout_margin="@dimen/margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSignUp"/>

    <LinearLayout
        android:id="@+id/llProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnGoToLogin"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/txtProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_profileInfo"
            android:textSize="@dimen/title_size"
            android:layout_margin="@dimen/margin"
            android:padding="@dimen/padding"
            android:textStyle="bold"
            android:textColor="@color/primaryColor"/>

        <EditText
            android:id="@+id/edtProfileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:maxLength="100"
            android:layout_margin="@dimen/margin"/>

        <EditText
            android:id="@+id/edtProfileStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_status"
            android:inputType="text"
            android:maxLength="1000"
            android:maxLines="5"
            android:layout_margin="@dimen/margin"/>

        <Button
            android:id="@+id/btn_submitProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_profile"
            android:layout_gravity="center"
            android:textSize="@dimen/text_size"
            android:layout_margin="@dimen/margin"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>